<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sammedalen.rpg.cprpgjavabasic.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title_text"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_changing_button_wrapper"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_log_sign"
            android:id="@+id/main_button_sign_log"
            android:visibility="visible"
            android:layout_alignParentTop="@+id/main_changing_button_wrapper"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_resume"
            android:id="@+id/main_button_resume_game"
            android:layout_below="@+id/main_button_sign_log"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Character"
            android:id="@+id/main_button_select_character"
            android:layout_below="@+id/main_button_sign_log"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Character"
            android:id="@+id/main_button_create_character"
            android:layout_below="@+id/main_button_sign_log"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
    </RelativeLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_log_out"
        android:id="@+id/main_button_log_out"
        android:visibility="visible"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_changing_button_wrapper" />


</RelativeLayout>
